syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "Messages/CommonTypes.proto";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.TypeTests";

package grpc_server.api.protos.messages.type_tests;

message DateOnlyTestDto {
    google.protobuf.Timestamp date_only_field = 1;
    repeated google.protobuf.Timestamp date_only_field_collection = 2;
    google.protobuf.Timestamp date_only_field_nullable = 3;
    ListOfTimestamp date_only_field_nullable_collection = 4;
}
